--- a/thesis_ref.bib
+++ b/thesis_ref.bib
@@ -1,12 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Kevin Song at 2019-01-15 17:18:35 -0600 
+%% Created for Kevin Song at 2019-01-25 14:37:23 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{tilegenova2016,
+	Author = {Tilegenova, Cholpon and Vemulapally, Spandana and Cortes, Doris M and Cuello, Luis G},
+	Date-Added = {2019-01-25 20:06:48 +0000},
+	Date-Modified = {2019-01-25 20:06:56 +0000},
+	Journal = {Protein expression and purification},
+	Pages = {53--60},
+	Publisher = {Elsevier},
+	Title = {An improved method for the cost-effective expression and purification of large quantities of KcsA},
+	Volume = {127},
+	Year = {2016}}
+
+@article{bhate2013,
+	Author = {Bhate, Manasi P and Wylie, Benjamin J and Thompson, Ameer and Tian, Lin and Nimigean, Crina and McDermott, Ann E},
+	Date-Added = {2019-01-25 20:03:38 +0000},
+	Date-Modified = {2019-01-25 20:03:45 +0000},
+	Journal = {Protein expression and purification},
+	Number = {2},
+	Pages = {119--124},
+	Publisher = {Elsevier},
+	Title = {Preparation of uniformly isotope labeled KcsA for solid state NMR: Expression, purification, reconstitution into liposomes and functional assay},
+	Volume = {91},
+	Year = {2013}}
+
+@article{shenkarev2013,
+	Author = {Shenkarev, Zakhar O and Lyukmanova, Ekaterina N and Butenko, Ivan O and Petrovskaya, Lada E and Paramonov, Alexander S and Shulepko, Mikhail A and Nekrasova, Oksana V and Kirpichnikov, Mikhail P and Arseniev, Alexander S},
+	Date-Added = {2019-01-25 17:24:30 +0000},
+	Date-Modified = {2019-01-25 17:24:35 +0000},
+	Journal = {Biochimica et Biophysica Acta (BBA)-Biomembranes},
+	Number = {2},
+	Pages = {776--784},
+	Publisher = {Elsevier},
+	Title = {Lipid--protein nanodiscs promote in vitro folding of transmembrane domains of multi-helical and multimeric membrane proteins},
+	Volume = {1828},
+	Year = {2013}}
 
 @article{hong2014,
 	Author = {Hong, Heedeok},
