--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,15 +1,5 @@
 %%% BEGIN CONCLUSION AND FUTURE DIRECTIONS %%%
-\chapter{Conclusion and Future Directions}
-\section{Conclusion}
-This thesis provides the first comprehensive study on potassium channel folding. The dynamics of potassium channel monomers are first studied through MD simulations and NMR spectroscopy, through which we found that the potassium channel monomers are dynamical and exists in a heterogeneous ensemble of native and non-native structures. Although the exact population level is system dependent, we found that the native state is found in 18\% and 44\% for Kv1.2 and KcsA, respectively.
-
-In order to design a mutant that remains its near-native state when monomerized, a disulfide-bridge was engineered at the ends of the 2 transmembrane helices in KcsA. By MD simulations and NMR spectroscopy, this disulfide-bonded (CC) KcsA mutant was shown to be more native-like and homogeneous in structural states.
-
-In our folding kinetics studies of WT and CC KcsA, we found that WT folds via 2 distinct processes, whereas the CC variant only undergoes through the faster process. This result suggests that locking the 2 transmembrane helices in native-like arrangement reduces KcsA monomers to misfold, which allows this CC variant to fold only through the faster process. This type of biphasic folding kinetics has been seen in soluble proteins as well, where the faster kinetic process represents productive folding and the slower kinetic process represents error-prone or misfolding process.
-
-In addition, concentration dependent folding kinetics of WT and CC KcsA was studied, in which we found that both WT and CC KcsA folding is concentration independent. This is quite surprising given that the native state of KcsA is a tetramer. For a simple kinetic scheme, $ 4 [M] \rightarrow [T]$, one would expect a 1000-fold decrease in $k_{app}$ or even if dimerization was rate-limiting, one would expect 10-fold decrease when monomer concentration is changed 10-fold. This result was surprising and suggested that the rate-limiting step in folding of ptoassium channel is unimolecular.
-
-Our concentration dependent folding kinetics study led us to hypothesize that the oligomerization process could happen very early on and folding within this near-native state is what is rate-limiting in this folding reaction. In order to investigate whether if oligomerization indeed is quick, we utilized FRET. FRET results indicated that the oligomerization process is much quicker than folding reactions indicating that KcsA might form a non-specific interaction with each other to form a dense protein-rich phase.
+\chapter{Future Directions and Conclusion}
 
 \section{Future aims}
 \subsection{Structure determination of disulfide engineered fast folding KcsA mutant}
@@ -23,11 +13,20 @@ The lipid raft hypothesis suggests that cholesterol and saturated lipids form pr
 In order to address the question of whether this protein-rich phase is real or not, we propose to use TIRF microscopy to study the formation of protein-rich phase. By looking at FRET under a microscope, we can directly observe whether protein-rich does occur in the membrane. In addition, this protein-rich phase seems to occur in soybean lipids, which we used in this thesis. It is possible that the soybean lipids act as poor solvent for KcsA causing the proteins to preferentially associate laterally in the membrane. Monitoring the formation of protein-rich phase under different lipid compositions will be informative. Perhaps, use of more anionic lipids or more unsaturated lipids can give rise to better solubilization of KcsA, which would eliminate the formation of protein-rich phase.
 
 \subsection{Determination of the rate-limiting step in KcsA folding}
-Through our concentration dependent folding kinetics studies, the rate-limiting step in KcsA folding was found to be unimolecular. This was quite surprising given the fact that KcsA is a tetramer in its native state. While we were able to show that by locking the 2 transmembrane helices in near-native state reduces KcsA's proclivity to misfold, the rate-limiting step in the reaction was not resolved.
+Through our concentration dependent folding kinetics studies, the rate-limiting step in KcsA folding was found to be unimolecular. This was quite surprising given the fact that KcsA is a tetramer in its native state. While we were able to show that by locking the 2 transmembrane helices in near-native state reduces KcsA's proclivity to misfold, the rate-limiting step in the reaction was not resolved. We hypothesize that the rate-limiting step correponds to the insertion of pore helices into the chamber created by 8 transmembrane helices in the membrane.
 
-We hypothesize that the rate-limiting step correponds to the insertion of pore helices into the chamber created by 8 transmembrane helices in the membrane. In order to test this hypothesis, here are some interesting ideas to try to pursue. 
+One of the ways to test our hypothesis is by introducing perturbations at the pore region to see if these perturbations affect the kinetics of the rate-limiting step. For example, potassium, barium and rubidium ions have been known to stabilize the pore structure in KcsA. In our refolding assays, none of these ions are present because they are known to strongly interact with SDS and precipitate. However, a double jump experiment could be done where SDS-solubilized KcsA monomers are first diluted into liposome solution, and then, a high concentration of potassium, barium or rubidium is injected into the refolding solution afterwards. This would give SDS-solubilized KcsA time to insert into the liposomes, so that SDS precipitation will not affect the protein. The presence of K+, Ba+ and Rb+ could increase the rate of folding by stabilizing the pore structure. In addition, we could design a disulfide bond between the pore helix and one of the 2 transmembrane helices to stabilize the native-like pore structure. This could also affect the rate-limiting step which would show that the pore region is involved in the rate-limiting step.
 
+\section{Conclusion}
+This thesis provides the first comprehensive study on potassium channel folding. The dynamics of potassium channel monomers are first studied through MD simulations and NMR spectroscopy, through which we found that the potassium channel monomers are dynamical and exists in a heterogeneous ensemble of native and non-native structures. Although the exact population level is system dependent, we found that the native state is found in 18\% and 44\% for Kv1.2 and KcsA, respectively.
 
+In order to design a mutant that remains its near-native state when monomerized, a disulfide-bridge was engineered at the ends of the 2 transmembrane helices in KcsA. By MD simulations and NMR spectroscopy, this disulfide-bonded (CC) KcsA mutant was shown to be more native-like and homogeneous in structural states.
+
+In our folding kinetics studies of WT and CC KcsA, we found that WT folds via 2 distinct processes, whereas the CC variant only undergoes through the faster process. This result suggests that locking the 2 transmembrane helices in native-like arrangement reduces KcsA monomers to misfold, which allows this CC variant to fold only through the faster process. This type of biphasic folding kinetics has been seen in soluble proteins as well, where the faster kinetic process represents productive folding and the slower kinetic process represents error-prone or misfolding process.
+
+In addition, concentration dependent folding kinetics of WT and CC KcsA was studied, in which we found that both WT and CC KcsA folding is concentration independent. This is quite surprising given that the native state of KcsA is a tetramer. For a simple kinetic scheme, $ 4 [M] \rightarrow [T]$, one would expect a 1000-fold decrease in $k_{app}$ or even if dimerization was rate-limiting, one would expect 10-fold decrease when monomer concentration is changed 10-fold. This result was surprising and suggested that the rate-limiting step in folding of ptoassium channel is unimolecular.
+
+Our concentration dependent folding kinetics study led us to hypothesize that the oligomerization process could happen very early on and folding within this near-native state is what is rate-limiting in this folding reaction. In order to investigate whether if oligomerization indeed is quick, we utilized FRET. FRET results indicated that the oligomerization process is much quicker than folding reactions indicating that KcsA might form a non-specific interaction with each other to form a dense protein-rich phase.
 %% END CONCLUSION AND FUTURE DIRECTIONS %%
 
 
